--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==4.2.16
 djangorestframework==3.15.2
 django-redis==5.4.0
 django-environ==0.9.0
-django-ckeditor==6.7.1
+django-ckeditor-5==0.2.15
 
 pillow==11.0.0
 
