--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Django==4.2.16
 djangorestframework==3.15.2
 django-redis==5.4.0
+redis==5.0.8
 django-environ==0.9.0
 django-ckeditor-5==0.2.15
-
 pillow==11.0.0
 
 
@@ -16,3 +16,4 @@ psycopg2==2.9.4
 
 celery==5.4.0
 django-celery-results==2.5.1
+django-celery-beat==2.7.0
